refactor(notification): merge fcm dispatch into strategy and relocate files